portfolio item overflow issue

--- a/src/styles/blocks/portfolio-item.scss
+++ b/src/styles/blocks/portfolio-item.scss
@@ -72,6 +72,7 @@
   }
   @media screen and (min-width: 768px) {
     grid-template-rows: 300px 1fr;
+    overflow: visible;
     .top {
       .gatsby-image-wrapper {
         border-radius: 0px;
